<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OneSound</string>
    <string name="title_facebook_login">fb login</string>
    <string name="s_p_onesound_token_key">AccessToken</string>
    <string name="no_interne_warning">Currently not connected to the internet. Please try again.</string>
    <string name="song_prepare_error">Error preparing song. Loading next.</string>
    <string name="small_text">Small Text</string>
    <string name="medium_text">Medium Text</string>
    <string name="edit_onesound_profile">Edit OneSound Profile</string>
    <string name="create_party">Create Party</string>
    <string name="edit_party">Edit Party</string>
    <string name="party_name">Party Name</string>
    <string name="search_for_song">Search for a song</string>
    <string name="dj_name">DJ Name</string>
    <string name="submit">Submit</string>
    <string name="edit_user">Edit User</string>
    <string name="imgdis">Image View</string>
    <string name="website_button">Visit Our Website</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Party</item>
        <item>Profile</item>
        <item>Favorite Songs</item>
        <item>App Settings</item>
    </string-array>

    <!-- Color selection array -->
    <string-array name="color_choices">
        <item>Red</item>
        <item>Purple</item>
        <item>Turquoise</item>
        <item>Orange</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>

    <!-- Color selection array -->
    <string-array name="strictness_choices">
        <item>Default</item>
        <item>Off</item>
        <item>Low</item>
        <item>Strict</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="help">Help</string>
    <string name="private_tag">Private:</string>
    <string name="strictness_tag">Strictness:</string>
    <string name="zero_15">0/15</string>
    <string name="not_in_party">You\'re currently not in a party</string>
    <string name="search_for_party">Search for a party to join one</string>
    <string name="leave_party">Leave Party</string>
    <string name="menu_search_party">Search For Party</string>
    <string name="menu_music_control">Music Control</string>
    <string name="edit_user_color">Color:</string>
    <string name="no_songs_in_playlist">No songs are queued in the playlist</string>
    <string name="playlist_no_songs">No songs are queued in the playlist</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_near_parties">No Nearby Parties</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_favorites">No Favorites</string>
    <string name="dont_want_to_join">I dont want to join a party.</string>
    <string name="start_party">Start a Party</string>
    <string name="favorites">Favorites</string>

</resources>
