<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit_party"
        android:title="@string/edit_party"
        android:enabled="true">
    </item>
    <item
        android:id="@+id/action_create_party"
        android:title="@string/create_party"
        android:enabled="true">
    </item>
    <item
        android:id="@+id/action_leave_party"
        android:title="@string/leave_party"
        android:enabled="true">
    </item>
    <item
        android:id="@+id/action_search_party"
        android:title="@string/menu_search_party"
        android:enabled="true">
    </item>
    <item
        android:id="@+id/action_music_control"
        android:title="@string/menu_music_control"
        android:enabled="true">
    </item>
</menu>