<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:id="@+id/rootLayout"
    android:background="@drawable/splash_background_2"
    tools:context="com.onesound.UI.NearPartiesActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:id="@+id/profilePic"
        android:layout_marginLeft="10dp"
        android:src="@drawable/defaultuserimageformainparty"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffff"
        android:id="@+id/skip"
        android:layout_below="@+id/search_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/dont_want_to_join"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:id="@+id/logo"
        android:src="@drawable/splashscreenlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/search_box"
        android:layout_below="@+id/logo"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:focusableInTouchMode="true"
        android:background="@drawable/white_location_box">
        <ImageView
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_map_location"/>
        <EditText
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/partyName"
            android:hint="@string/menu_search_party"
            android:layout_marginRight="10dp"
            android:textColorHint="#CDCDCD" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_party"
        android:layout_below="@id/search_box"
        android:background="@drawable/create_party_background"
        android:text="@string/start_party"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#FFFF"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_party"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/noPartiesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_near_parties"
            android:textColor="#FFFF"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/parties"
            android:visibility="visible"/>

    </RelativeLayout>

</RelativeLayout>
