<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_dark"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:src="@drawable/splashscreenlogo"/>-->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transp_black_5"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:tabGravity="fill"
            app:tabIndicatorColor="@android:color/white"
            app:tabIndicatorHeight="5dp"
            app:tabMode="fixed" />

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/now_playing_view"
        android:layout_below="@+id/appbar"/>

    <RelativeLayout
        android:id="@+id/now_playing_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="true"
        android:background="@color/onesoundBlueDark">

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@android:color/white"/>

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/label"-->
        <!--android:text="NOW PLAYING"-->
        <!--android:gravity="center"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_above="@+id/np"/>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/AlbumArt"
                android:layout_marginTop="3dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/imgdis"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/AlbumArt"
                android:layout_toLeftOf="@+id/dj_pic"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6" />

                <TextView
                    android:id="@+id/SongName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:text="@string/medium_text" />

                <TextView
                    android:id="@+id/Artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white"
                    tools:text="@string/small_text" />

            </LinearLayout>

            <ImageView
                android:id="@+id/dj_pic"
                android:layout_marginTop="3dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/imgdis" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>





