<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/background"
            tools:src="@drawable/defaultuserimageformainparty"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ProfilePic"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:contentDescription="@string/imgdis"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                tools:src="@drawable/defaultuserimageformainparty" />
           <Space
               android:layout_width="20dp"
               android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="username" />

                <RelativeLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/UpVoteScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:drawableTop="@drawable/ic_up_vote_count_white"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        tools:text="13" />

                    <TextView
                        android:id="@+id/SongsScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:drawableTop="@drawable/ic_song_icon_white"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:textSize="17sp"
                        tools:text="13" />

                    <TextView
                        android:id="@+id/HotnessScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@android:color/white"
                        android:drawableTop="@drawable/ic_points_white"
                        android:gravity="center"
                        android:textSize="17sp"
                        tools:text="13" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/onesoundGreenDark"
        android:background="@android:color/white"
        android:textStyle="bold"
        android:text="@string/favorites"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/profile"
        android:layout_weight=".7">

        <ProgressBar
            android:id="@+id/progressBarFavorites"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone"/>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/favorites_swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/favorites_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/noFavorites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_favorites"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>